@@ -15,6 +15,7 @@ import us.smartmc.lobbycosmetics.instance.cosmetic.ICosmetic;
 import us.smartmc.lobbycosmetics.instance.cosmetic.ICosmeticSection;
 import us.smartmc.lobbycosmetics.instance.player.CosmeticPlayerSession;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class CosmeticSectionMenu extends CoreMenu {
@@ -47,6 +48,6 @@ public class CosmeticSectionMenu extends CoreMenu {
         cosmetic.getPreviewItemBuilder(playerSession, section, language);
         ItemBuilder builder = cosmetic.getPreviewItemBuilder(playerSession, section, language);
         inventory.setItem(slot, builder.get(initPlayer));
-        actionManager.registerItemAction(slot, get(slot), List.of("toggleCosmetic " + cosmetic.getType().name() + " " + cosmetic.getId()));
+        actionManager.registerItemAction(slot, get(slot), Arrays.asList("toggleCosmetic " + cosmetic.getType().name() + " " + cosmetic.getId()));
     }
 }
